add footer, update contact pages.

--- a/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
@@ -7,87 +7,234 @@
 
 <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdQdyohAAAAAIMQ7PGarjxzxjWpL6mP-xoW1hFO"></script>
 <script>
-    grecaptcha.enterprise.ready(function () {
-        grecaptcha.enterprise.execute('6LdQdyohAAAAAIMQ7PGarjxzxjWpL6mP-xoW1hFO', { action: 'contact_us' }).then(function (token) {
-       $("#GoogleCaptchaToken").val(token);
+        grecaptcha.enterprise.ready(function () {
+            grecaptcha.enterprise.execute('6LdQdyohAAAAAIMQ7PGarjxzxjWpL6mP-xoW1hFO', { action: 'contact_us' }).then(function (token) {
+           $("#GoogleCaptchaToken").val(token);
+        });
     });
-});
 </script>
 
 <div class="container-xxl py-5">
     <div class="container">
-        <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">დაგვიკავშირდით ნებისმიერი საკითხის შემთხვევაში
+        <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
+            დაგვიკავშირდით ნებისმიერი საკითხის შემთხვევაში
         </h1>
-        <div class="row g-4">
+
+        <div class="row g-4 text-center mt-4">
+            <h2>ახალციხის კოლეჯი "ოპიზარი"</h2>
             <div class="col-12">
                 <div class="row gy-4">
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
                         <div class="d-flex align-items-center bg-light rounded p-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
-                                style="width: 45px; height: 45px;">
+                                 style="width: 45px; height: 45px;">
                                 <i class="fa fa-map-marker-alt text-primary"></i>
                             </div>
-                            <span>1187a ნუცუბიძის ქუჩა, თბილისი 0186</span>
+                            <span>ქ. ახალციხე რუსთაველის ქ. #111</span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
                         <div class="d-flex align-items-center bg-light rounded p-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
-                                style="width: 45px; height: 45px;">
+                                 style="width: 45px; height: 45px;">
                                 <i class="fa fa-envelope-open text-primary"></i>
                             </div>
-                            <span>taoba@taoba.org.ge</span>
+                            <span> <a href="mailto: opizari2011@gmail.com">ფოსტა</a></span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
                         <div class="d-flex align-items-center bg-light rounded p-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
-                                style="width: 45px; height: 45px;">
+                                 style="width: 45px; height: 45px;">
                                 <i class="fa fa-phone-alt text-primary"></i>
                             </div>
-                            <span> +995 595 55 16 16</span>
+                            <span> <a href="tel:+995-577-20-07-30"> +995 577 20 07 30</a></span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="bi bi-facebook text-secondary" aria-hidden="true"></i>
+                            </div>
+                            <span> <a href="https://www.facebook.com/%E1%83%A1%E1%83%A1%E1%83%98%E1%83%9E-%E1%83%99%E1%83%9D%E1%83%9A%E1%83%94%E1%83%AF%E1%83%98-%E1%83%9D%E1%83%9E%E1%83%98%E1%83%96%E1%83%90%E1%83%A0%E1%83%98-805903136163386/" style="color:#3737db;">ოპიზარი</a> </span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="bi bi-compass text-primary" aria-hidden="true"></i>
+                            </div>
+                            <span> <a href="http://opizarivet.ge/">ოპიზარი</a> </span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7403979846913!2d44.7221719156637!3d41.72612038288986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730a51b3d4a7%3A0x7811affb5ef51f2f!2s1187a%2C%20186%20Shalva%20Nutsubidze%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1657948507896!5m2!1sen!2sge"
-                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="col-md-12 wow fadeInUp border" data-wow-delay="0.1s">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2981.7940084297!2d42.993648115433686!3d41.63858377924191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4042dbb2e210c6ab%3A0xedccd630e7950f6c!2z4YOh4YOh4YOY4YOeIOGDmeGDneGDmuGDlOGDr-GDmCAi4YOd4YOe4YOY4YOW4YOQ4YOg4YOYIg!5e0!3m2!1sen!2sge!4v1659431338168!5m2!1sen!2sge"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="col-md-6">
-                <div class="wow fadeInUp" data-wow-delay="0.5s">
-                    <form asp-action="ContactUs" method="post">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input asp-for="Name" type="text" class="form-control"
-                                        placeholder="თქვენი სახელი" />
-                                    <label asp-for="Name">სახელი </label>
-                                </div>
+        </div>
+
+        <hr />
+
+        <div class="row g-4 text-center mt-4">
+            <h2>კაჭრეთის კოლეჯი "აისი"</h2>
+            <div class="col-12">
+                <div class="row gy-4">
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="fa fa-map-marker-alt text-primary"></i>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input asp-for="Email" class="form-control" placeholder="თქვენი მეილი" />
-                                    <label asp-for="Email">ელ-ფოსტა </label>
-                                </div>
+                            <span>საქართველო, გურჯაანის მუნიციპალიტეტი, კაჭრეთი.</span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="fa fa-envelope-open text-primary"></i>
                             </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea asp-for="Message" class="form-control" placeholder="დაგვიტოვეთ მესიჯი"
-                                        style="height: 150px"></textarea>
-                                    <label asp-for="Message">ტექსტი</label>
-                                </div>
+                            <span><a href="mailto: kachreti@gmail.com">ფოსტა</a></span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="fa fa-phone-alt text-primary"></i>
                             </div>
-                                <input asp-for="GoogleCaptchaToken" type="hidden"/>
-                            <div class="col-12">
-                                <input type="submit" class="btn btn-primary w-100 py-3" value="გაგზავნა"></input>
+                            <span><a href="tel: 0(353)200-423">0(353)200 423</a><br /><a href="tel:0(353)200-493">0(353)200 493</a></span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="bi bi-facebook text-secondary" aria-hidden="true"></i>
+                            </div>
+                            <span> <a href="https://www.facebook.com/CollegeAisi" style="color:#3737db;">აისი</a> </span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="bi bi-compass text-primary" aria-hidden="true"></i>
+                            </div>
+                            <span> <a href="http://www.collegeaisi.ge/">აისი</a> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 wow fadeInUp border" data-wow-delay="0.1s">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14084.993460306387!2d45.687554!3d41.642597!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb2b4c9365cae8911!2z4YOQ4YOY4YOh4YOYIC0g4YOZ4YOQ4YOt4YOg4YOU4YOX4YOY4YOhIOGDnuGDoOGDneGDpOGDlOGDoeGDmOGDo-GDmuGDmCDhg6Hhg5Dhg6Hhg6zhg5Dhg5Xhg5rhg5Thg5Hhg5Thg5rhg5g!5e1!3m2!1ska!2sge!4v1597702023307!5m2!1ska!2sge"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="row g-4 text-center mt-4">
+            <h2>ილია წინამძღვრიშვილის სახელობის კოლეჯი</h2>
+            <div class="col-12">
+                <div class="row gy-4">
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="fa fa-map-marker-alt text-primary"></i>
+                            </div>
+                            <span>მცხეთის რაიონი სოფელი წინამძღვრიანთკარი</span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="fa fa-envelope-open text-primary"></i>
+                            </div>
+                            <span><a href="mailto: tmkcollege@tmk.edu.ge">ფოსტა</a></span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="fa fa-phone-alt text-primary"></i>
+                            </div>
+                            <span> <a href="tel:+995 577 21-50-90">+995 577 21 50 90</a></span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="bi bi-facebook text-secondary" aria-hidden="true"></i>
+                            </div>
+                            <span> <a href="https://www.facebook.com/%E1%83%A1%E1%83%A1%E1%83%98%E1%83%9E-%E1%83%98%E1%83%9A%E1%83%98%E1%83%90-%E1%83%AC%E1%83%98%E1%83%9C%E1%83%90%E1%83%9B%E1%83%AB%E1%83%A6%E1%83%95%E1%83%A0%E1%83%98%E1%83%A8%E1%83%95%E1%83%98%E1%83%9A%E1%83%98%E1%83%A1-%E1%83%A1%E1%83%90%E1%83%AE%E1%83%94%E1%83%9A%E1%83%9D%E1%83%91%E1%83%98%E1%83%A1-%E1%83%99%E1%83%9D%E1%83%9A%E1%83%94%E1%83%AF%E1%83%98-1765470457072557/" style="color:#3737db;">ილია წინამძღვრიშვილის სახელობის კოლეჯი</a> </span>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                                 style="width: 45px; height: 45px;">
+                                <i class="bi bi-compass text-primary" aria-hidden="true"></i>
+                            </div>
+                            <span> <a href="https://tmk.edu.ge/">ილია წინამძღვრიშვილის სახელობის კოლეჯი</a> </span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-12 wow fadeInUp border" data-wow-delay="0.1s">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6034.70969923602!2d44.81294284999934!3d41.92044888426239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40445d5e84ca248b%3A0xf91a42037808b87b!2sTsinamdzghvriantkari!5e1!3m2!1sen!2sge!4v1441549781102"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+    </div>
+    <hr />
+
+    <div class="d-flex justify-content-center mt-5">
+        <div class="col-11 text-center">
+             <h2 class="mb-5">გაუგზავნე წერილი findjob.ge - ს</h2>
+            <div class="wow fadeInUp" data-wow-delay="0.5s">
+                <form asp-action="ContactUs" method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input asp-for="Name" type="text" class="form-control"
+                                       placeholder="თქვენი სახელი" />
+                                <label asp-for="Name">სახელი </label>
                             </div>
                         </div>
-                    </form>
-                </div>
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input asp-for="Email" class="form-control" placeholder="თქვენი მეილი" />
+                                <label asp-for="Email">ელ-ფოსტა </label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <textarea asp-for="Message" class="form-control" placeholder="დაგვიტოვეთ მესიჯი"
+                                          style="height: 150px"></textarea>
+                                <label asp-for="Message">ტექსტი</label>
+                            </div>
+                        </div>
+                        <input asp-for="GoogleCaptchaToken" type="hidden" />
+                        <div class="col-12">
+                            <input type="submit" class="btn btn-primary w-100 py-3" value="გაგზავნა"></input>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
