--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddSkill.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddSkill.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "დაამატე უნარი";
 }
 <div class="row text">
-    <div class="col-md-8 offset-2">
+    <div class="col-md-8 offset-lg-3 offset-md-2 offset-lg-2">
         <p>
             <h1 class="text-center">დაამატე უნარი</h1>
         </p>
         <div class="row">
-            <div class="col-md-8 offset-2">
+            <div class="col-md-8 offset-lg-3 offset-md-2 offset-lg-2">
                 <form asp-action="AddSkill" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
