--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddWorkingExperience.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddWorkingExperience.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "დაამატე სამუშაო გამოცდილება";
 }
 
-<div class="row">
-            <div class="col-md-8 offset-2">
+<div class="row py-5">
+            <div class="col-md-8 offset-lg-2 offset-md-2">
                 <form asp-action="AddWorkingExperience" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
