--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddEducation.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddEducation.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div class="row text">
-    <div class="col-md-8 offset-2">
+    <div class="col-md-8 offset-lg-3 offset-md-2 offset-lg-2">
         <p>
             <h1 class="text-center">დაამატე განათლება</h1>
         </p>
         <div class="row">
-            <div class="col-md-8 offset-2">
+            <div class="col-md-8 offset-lg-3 offset-md-2 offset-lg-2">
                 <form asp-action="AddEducation" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
