--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!-- container -->
-<div class="container">
+<div class="container px-1 mb-3">
 
     <!-- wrapper -->
     <div class="wrapper mt-4">
@@ -230,16 +230,17 @@
             <!--/ column right -->
         </div>
         <hr>
-
+        
+        
     </div>
     <!--/ wrapper -->
-    @if (User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()) && @Model.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier)))
-    {
-        <div class="mt-2 float-right">
-            <a class="btn btn-outline-success rounded-pill float-right" asp-controller="CurriculumVitae" asp-action="Update">რედაქტირება</a>
-        </div>
-    }
 
+    @if (User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()) && @Model.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier)))
+        {
+            <div class="mt-2 float-right" style="margin-bottom:6.5rem">
+                <a class="btn btn-outline-success rounded-pill float-right" asp-controller="CurriculumVitae" asp-action="Update">რედაქტირება</a>
+            </div>
+        }
 </div>
 
 <script>
