--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Update.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Update.cshtml
@@ -13,7 +13,7 @@
 
 
         <div class="row">
-            <div class="col-md-8 offset-md-2 offset-lg-2 offset-xl-2">
+            <div class="col-md-8 offset-md-2 offset-lg-2 offset-xl-2 mb-2">
                 <form asp-action="Update" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -82,6 +82,14 @@
                                 <input asp-for="BirthDate" type="date" class="form-control" />
                                 <span asp-validation-for="BirthDate" class="text-danger"></span>
                             </div>
+                            
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Address" class="control-label"></label>
+                                <input asp-for="Address" class="form-control" />
+                                <span asp-validation-for="Address" class="text-danger"></span>
+                            </div>
                             <div class="form-group">
                                 <label asp-for="PhoneNumber" class="control-label"></label>
                                 <input asp-for="PhoneNumber" class="form-control" />
@@ -93,16 +101,7 @@
                                 <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="Address" class="control-label"></label>
-                                <input asp-for="Address" class="form-control" />
-                                <span asp-validation-for="Address" class="text-danger"></span>
-                            </div>
 
-
-
-                        </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label asp-for="AboutMe" class="control-label"></label>
@@ -113,7 +112,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="submit" value="შენახვა" class="btn btn-outline-success float-right" />
+                        <input type="submit" value="შენახვა" class="btn btn-outline-success rounded-pill float-right" />
                     </div>
                 </form>
             </div>
