--- a/src/Hackathon_CV_Portal.Web/Views/Home/Error.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/Error.cshtml
@@ -8,7 +8,7 @@
             <p class="lead">
                 უპს... დაფიქსირდა შეცდომა
             </p>
-            <a asp-controller="Home" asp-action="Idex" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
+            <a asp-controller="Home" asp-action="Index" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
         </div>
     </div>
 </body>
