--- a/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
@@ -8,9 +8,9 @@
     ViewData["Title"] = "Register";
 }
 
-<section class="vh-100" style="background-color: #eee;">
-    <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
+<section class="vh-100">
+    <div class="container h-100 py-5">
+        <div class="row d-flex justify-content-center h-100">
             <div class="col-lg-8 col-xl-6">
                 <div class="card text-black" style="border-radius: 25px;">
                     <div class="card-body bg-primary text-white p-md-5" style="border-radius: 1rem;">
