--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -77,7 +77,7 @@
                         @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()))
                         {
                             <h2>თქვენ არ გაქვთ განთავსებული ვაკასიები.</h2>
-                            <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Add">ვაკანსიის დამატება</a>
+                            <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Create">ვაკანსიის დამატება</a>
                         }
                     }
                     else
