--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                             <a class="nav-link text-dark" asp-controller="User" asp-action="Index">მომხარებლები</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Location" asp-action="Index">მისამართები</a>
+                            <a class="nav-link text-dark" asp-controller="Location" asp-action="Index">ლოკაციები</a>
                         </li>
                     }
                     <a class="nav-link text-dark" asp-area="" asp-controller="About" asp-action="Index">ჩვენს შესახებ</a>
