--- a/src/Hackathon_CV_Portal.Web/Views/Location/AddLocation.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Location/AddLocation.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Hackathon_CV_Portal.Web.Models.LocationModel
 @model CreateLocationDto
 @{
-    ViewData["Title"] = "დაამატე ლოკაცია";
+    ViewData["Title"] = "ლოკაციებიs მართვა";
 }
 <div class="row text">
     <div class="col-md-8 offset-lg-2 offset-md-2">
          <p>
-            <h1 class="text-center">დაამატე ლოკაცია</h1>
+            <h1 class="text-center">ლოკაციებიs მართვა</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-lg-2 offset-md-2">
