--- a/src/Hackathon_CV_Portal.Web/Views/Location/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Location/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<LocationVM>
 
 @{
-    ViewData["Title"] = "მისამართების მართვა";
+    ViewData["Title"] = "ლოკაციების მართვა";
 }
 
 <div class="row text">
