--- a/src/Hackathon_CV_Portal.Web/Views/Home/NotFound.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/NotFound.cshtml
@@ -10,7 +10,7 @@
             <p class="lead">
                 The page you’re looking for doesn’t exist.
             </p>
-            <a asp-controller="Home" asp-action="Idex" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
+            <a asp-controller="Home" asp-action="Index" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
         </div>
     </div>
 </body>
