--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/AddVacancyDetail.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/AddVacancyDetail.cshtml
@@ -100,16 +100,17 @@
                             data-target="#responsibilityModal"><i class="bi bi-plus fa-1x"></i> დამატება</button>
                     </div>
                 </div>
+                <div class="d-flex align-items-center justify-content-center ">
+                    <div class="text-center">
+                        <a asp-controller="Vacancy" asp-action="Detail" asp-route-id="@Model.VacancyId"
+                            class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-    <div class="d-flex align-items-center justify-content-center vh-100">
-        <div class="text-center">
-            <a asp-controller="Vacancy" asp-action="Detail" asp-route-id="@Model.VacancyId" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
-        </div>
-    </div>
 <script type="text/javascript">
     function AddQualification() {
         var vacancyId = window.location.href.substring(window.location.href.indexOf('=') + 1);;
