--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/UpdateVacancyDetail.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/UpdateVacancyDetail.cshtml
@@ -9,8 +9,8 @@
 <div class="row">
     <div class="col-md-6 offset-lg-3 offset-md-2 offset-lg-2">
         <div class="row">
-            <div class="modal fade" id="qualificationModal" tabindex="-1" role="dialog" aria-labelledby="qualificationModalLabel"
-                 aria-hidden="true">
+            <div class="modal fade" id="qualificationModal" tabindex="-1" role="dialog"
+                aria-labelledby="qualificationModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -23,7 +23,8 @@
                             <form>
                                 <div class="form-group">
                                     <label for="message-text" class="col-form-label">კვალიფიკაცია:</label>
-                                    <textarea id="QualificationNameInput" class="form-control" id="message-text"></textarea>
+                                    <textarea id="QualificationNameInput" class="form-control"
+                                        id="message-text"></textarea>
                                 </div>
                             </form>
                         </div>
@@ -34,8 +35,8 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade" id="responsibilityModal" tabindex="-1" role="dialog" aria-labelledby="responsibilityLabel"
-                 aria-hidden="true">
+            <div class="modal fade" id="responsibilityModal" tabindex="-1" role="dialog"
+                aria-labelledby="responsibilityLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -48,13 +49,15 @@
                             <form>
                                 <div class="form-group">
                                     <label for="message-text" class="col-form-label">მოთხოვნა:</label>
-                                    <textarea id="ResponsibilityNameInput" class="form-control" id="message-text"></textarea>
+                                    <textarea id="ResponsibilityNameInput" class="form-control"
+                                        id="message-text"></textarea>
                                 </div>
                             </form>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">ჩახურვა</button>
-                            <button type="button" onClick="AddResponsibility()" class="btn btn-primary">დამატება</button>
+                            <button type="button" onClick="AddResponsibility()"
+                                class="btn btn-primary">დამატება</button>
                         </div>
                     </div>
                 </div>
@@ -62,7 +65,8 @@
             <div class="row">
                 <div class="">
                     <h3>კვალიფიკაციები:</h3>
-                    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#qualificationModal"><i class="bi bi-plus fa-1x"></i> დამატება</button>
+                    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                        data-target="#qualificationModal"><i class="bi bi-plus fa-1x"></i> დამატება</button>
                     @if (Model.Qualifications.Count() == 0)
                     {
                         <p>ჯერ არ გაქვთ დამატებული კვალიფიკაცია</p>
@@ -75,7 +79,9 @@
                                     <p class="text-sm-left">. @qualification.QualificationName</p>
                                 </div>
                                 <div class="col-sm">
-                                    <a class="btn btn-danger btn-sm" asp-controller="Vacancy" asp-action="DeleteQualification" asp-route-qualificationId="@qualification.Id" asp-route-vacancyId="@qualification.VacancyId">წაშლა</a>
+                                    <a class="btn btn-danger btn-sm" asp-controller="Vacancy"
+                                    asp-action="DeleteQualification" asp-route-qualificationId="@qualification.Id"
+                                    asp-route-vacancyId="@qualification.VacancyId">წაშლა</a>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +89,8 @@
                 </div>
                 <div>
                     <h3>მოვალეობა:</h3>
-                    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#responsibilityModal"><i class="bi bi-plus fa-1x"></i> დამატება</button>
+                    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                        data-target="#responsibilityModal"><i class="bi bi-plus fa-1x"></i> დამატება</button>
                     @if (Model.Responsibilities.Count() == 0)
                     {
                         <p>ჯერ არ გაქვთ დამატებული მოვალეობები</p>
@@ -96,12 +103,20 @@
                                     <p class="text-sm-left">. @responsibility.ResponsibilityName</p>
                                 </div>
                                 <div class="col-sm">
-                                    <a class="btn btn-danger btn-sm" asp-controller="Vacancy" asp-action="DeleteResponsibility" asp-route-responsibilityId="@responsibility.Id" asp-route-vacancyId="@responsibility.VacancyId">წაშლა</a>
+                                    <a class="btn btn-danger btn-sm" asp-controller="Vacancy"
+                                    asp-action="DeleteResponsibility" asp-route-responsibilityId="@responsibility.Id"
+                                    asp-route-vacancyId="@responsibility.VacancyId">წაშლა</a>
                                 </div>
                             </div>
                         </div>
 
                     }
+                </div>
+            </div>
+            <div class="d-flex align-items-center justify-content-center ">
+                <div class="text-center">
+                    <a asp-controller="Vacancy" asp-action="Detail" asp-route-id="@Model.VacancyId"
+                        class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
                 </div>
             </div>
         </div>
@@ -120,10 +135,10 @@
                 responsibilityName: responsibilityName,
                 vacancyId: vacancyId,
             },
-            success: function(response) {
+            success: function (response) {
                 window.location.href = response.redirectToUrl;
             },
-            error: function(data) {
+            error: function (data) {
                 console.log('There was a problem');
             }
         });
@@ -140,10 +155,10 @@
                 responsibilityName: responsibilityName,
                 vacancyId: vacancyId,
             },
-            success: function(response) {
+            success: function (response) {
                 window.location.href = response.redirectToUrl;
             },
-            error: function(data) {
+            error: function (data) {
                 console.log('There was a problem');
             }
         });
